added clarification of var

--- a/hddm/error-loading-model.ipynb
+++ b/hddm/error-loading-model.ipynb
@@ -29,7 +29,8 @@
    "metadata": {},
    "source": [
     "# Save HDDM\n",
-    "N.B.: `data_folder` is a string variable for the \"data\" directory."
+    "- `data_folder` is a string variable for the \"data\" directory.\n",
+    "- `proj_name` is also a string."
    ]
   },
   {
